Fix overlapping background

--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ html {
   width: 100%;
   overflow-x: hidden;
   -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
   }
   
   *,
@@ -103,7 +104,7 @@ p {
   /* background-color: #fafafa; */
   flex: 0 1 15%;
   z-index: 1001;
-  min-height: 40vh;
+  min-height: 30vh;
   max-width: 60rem;
   width: 100%;
   text-align: center;
@@ -120,6 +121,7 @@ p {
   max-width: 60rem;
   width: 100%;
   font-family: 'Source Serif 4', serif;
+  /* text-decoration: underline; */
   font-size: 3rem;
 }
 
@@ -148,8 +150,8 @@ p {
 }
 
 .odd {
-  background-color: rgba(1, 1, 1, .1);
-  -webkit-backdrop-filter: blur(5px);
+  background-color: rgba(1, 1, 1, .15);
+  -webkit-backdrop-filter: blur(25px);
 }
 
 .right {
@@ -266,7 +268,7 @@ min-height: 40vh;
     flex-direction: column;
     flex: 1 1 auto;
   position: absolute;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     z-index: -1;
 }
 
@@ -277,7 +279,7 @@ min-height: 40vh;
   display: flex;
   place-content: center;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* max-height: 100%;
   max-width: 100vw; */
   width:inherit; 
@@ -287,11 +289,15 @@ min-height: 40vh;
 
 @keyframes rotate {
   0% {
-    transform: translateX(0vw) rotate(0deg);
+    transform: translateX(0vw) translateY(0vw) rotate(0deg);
+  }
+
+  50% {
+    transform: translateX(60vw) translateY(20vw) rotate(360deg);
   }
 
   100% {
-    transform: translateX(60vw) rotate(360deg);
+    transform: translateX(60vw) translateY(0vw) rotate(360deg);
   }
 }
 
@@ -300,8 +306,12 @@ min-height: 40vh;
     transform: translateX(60vw) translateY(15vh) rotate(0deg);
   }
 
+  50% {
+    transform: translateX(50%) translateY(300%) rotate(360deg);
+  }
+
   100% {
-    transform: translateX(-50%) translateY(100%) rotate(360deg);
+    transform: translateX(10vw) translateY(15vh) rotate(0deg);
   }
 }
 
@@ -324,7 +334,7 @@ min-height: 40vh;
   background-color: #FFB74D;
   animation: rotate2 var(--speed) var(--easing) alternate infinite;
   border-radius: 20vw 80vw 120vw 30vw / 10vw 30vw 10vw 70vw;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* .clouds {
